--- a/index.html
+++ b/index.html
@@ -11,45 +11,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Habits</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <img src="./assets/logo.svg" alt="Logomarca do aplicativo Habits" />
+
       <button>
         <img src="./assets/plus.svg" alt="ícone sinal de mais roxo" />
-        Registrar meu dia
+        <div>Registrar meu dia</div>
       </button>
     </header>
 
-    <form action="">
+    <form id="form-habits">
       <div class="habits">
-        <div class="habit">💪</div>
-        <div class="habit">🍽</div>
-        <div class="habit">🍓</div>
+        <div class="habit" data-name="run">🏃🏽‍♂️</div>
+        <div class="habit" data-name="water">💧</div>
+        <div class="habit" data-name="food">🍎</div>
       </div>
 
-      <div class="days">
-        <div class="day">
-          <div>03/01</div>
-          <input type="checkbox" name="academia" />
-          <input type="checkbox" name="almoço" />
-          <input type="checkbox" name="lanche" />
-        </div>
-        <div class="day">
-          <div>04/01</div>
-          <input type="checkbox" name="academia" />
-          <input type="checkbox" name="almoço" />
-          <input type="checkbox" name="lanche" />
-        </div>
-        <div class="day">
-          <div>05/01</div>
-          <input type="checkbox" name="academia" />
-          <input type="checkbox" name="almoço" />
-          <input type="checkbox" name="lanche" />
-        </div>
-      </div>
+      <div class="days"></div>
     </form>
+
+    <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
