--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <div class="habits">
         <div class="habit" data-name="run">🏃🏽‍♂️</div>
         <div class="habit" data-name="water">💧</div>
-        <div class="habit" data-name="food">🍎</div>
+        <div class="habit" data-name="food">🥪</div>
+        <div class="habit" data-name="meditation">🧘‍♀️</div>
+        <div class="habit" data-name="cat">🐈</div>
       </div>
 
       <div class="days"></div>
